app-code/ttyd/ttyd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ttyd-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ttyd.aura`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: monitoring
      services:
        - name: ttyd-svc
          port: 3022
